2004-03-31  Mark McLoughlin  <mark@skynet.ie>

	Fix last remaining obvious issue I'm seeing with the previous
	patches. gconfd was crashing when removing objects from the
	panel.

	* gconf/gconf-database.c: (gconf_database_recursive_unset):
	Don't try and propogate a NULL error.
	
	* gconf/gconf-sources.c:
	(gconf_sources_unset_value): create modified_sources when
	they it doesn't exist.
	(prepend_unset_notify): add a couple of assertions.
	(recursive_unset_helper): unset modified_sources between
	unsets so that we don't append to the same source list.

2004-03-30  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconf-backend.c: (gconf_backend_verify_vtable):
	Return TRUE if the vtable is okay.

2004-03-30  Mark McLoughlin  <mark@skynet.ie>

	* doc/gconf/tmpl/gconf-backend.sgml: add some documentation
	for set_notify_func().

2004-03-30  Mark McLoughlin  <mark@skynet.ie>

	* tests/testbackend.c: (foreach_recursive), (sync_and_clear),
	(check_unset), (set_value), (get_value): upd. for the fact
	we have a copy of the vtale now rather than a pointer to it.

2004-03-30  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconf-backend.h: actually add the vtable_size
	vtable member.

2004-03-29  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconf-database.c:
	(safe_g_hash_table_insert): remove - no hash table here.

2004-03-29  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconf-engine.h: add gconf_engine_get_for_addresses()
	and gconf_engine_get_local_for_addresses().
	
	* gconf/gconf.c:
	(gconf_engine_connect): implement setting up a database from
	an arbitrary stack of sources.
	(register_engine): use the concatenation of addresses for the key.
	(unregister_engine): free the persistent address and address list on
	unregistering.
	(lookup_engine): use the concatenation of addresses for the key.
	(gconf_engine_get_local_for_addresses): add.
	(gconf_engine_get_for_address): update for register_engine change.
	(gconf_engine_get_for_addresses): impl support for remote composite dbs.