@@ -1,3 +1,8 @@
+2004-04-01  Mark McLoughlin  <mark@skynet.ie>
+
+	* gconf/default.path.in: fix the position of the
+	local-defaults.path include. Bug #137578.
+
 2004-03-31  Mark McLoughlin  <mark@skynet.ie>
 
 	Fix last remaining obvious issue I'm seeing with the previous
